fix style for zero button, so it's not center align

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,6 +90,8 @@ button {
 #zero {
     min-width: 190px;
     border-radius: 80px;
+    text-align: left;
+    padding-left: 35px;
 }
 
 .function-button {
